updated mark.js and playground libraries

--- a/doc-v2/TypeScript-types.html
+++ b/doc-v2/TypeScript-types.html
@@ -72,7 +72,7 @@ $(<span class="str">"article"</span>).mark(<span class="str">'lorem ipsum'</span
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
