--- a/doc-v2/elements-boundaries.html
+++ b/doc-v2/elements-boundaries.html
@@ -94,7 +94,7 @@ select, svg, table, tbody, td, textarea, tfoot, th, thead, tr, track, ul, video<
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
