--- a/doc-v2/index.html
+++ b/doc-v2/index.html
@@ -48,7 +48,7 @@
 <article id="article"><h2 style="margin-left: 20px">Content</h2><ul class="menu"><li><a href="getting-started.html">Getting started</a></li><li><span>API</span><ul><li><a href="mark-method.html">mark() method</a></li><li><a href="markRegExp-method.html">markRegExp() method</a></li><li><a href="markRanges-method.html">markRanges() method</a></li><li><a href="unmark-method.html">unmark() method</a></li></ul></li><li><span>Usage</span><ul><li><a href="performance.html">Performance</a></li><li><a href="options.html">Options descriptions</a></li><li><a href="filtering-matches.html">Filtering matches</a></li><li><a href="separate-groups.html">Highlighting separate groups</a></li><li><a href="nesting-overlapping.html">Nesting/overlapping ranges and match groups</a></li><li><a href="elements-boundaries.html">Elements boundaries</a></li><li><a href="shadow-dom.html">Highlighting in shadow DOM</a></li><li><a href="mark-lines.html">Highlighting line ranges</a></li><li><a href="some-examples.html">Code examples of using `each` and `done` callbacks</a></li><li><a href="TypeScript-types.html">TypeScript types</a></li></ul></li><li><span>RegExpCreator</span><ul><li><a href="RegExpCreator-module.html">RegExpCreator module</a></li></ul></li><li><span>src</span><ul><li><a href="mark.html">Mark class</a></li><li><a href="domiterator.html">DOMIterator class</a></li><li><a href="regexpcreator.html">RegExpCreator class</a></li></ul></li></ul>
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
