--- a/doc-v2/performance.html
+++ b/doc-v2/performance.html
@@ -186,7 +186,7 @@ The performance gain gradually grows, starting with an array containing 2-3 item
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
