--- a/doc-v2/separate-groups.html
+++ b/doc-v2/separate-groups.html
@@ -151,7 +151,7 @@ instance.markRegExp(<span class="jreg">/(AB).+?(CD)/gi</span>, {
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
