--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
 </div>
 </form>
 <main>
-<article id="article"><h2>GitHub Pages site is still under development</h2><p>Doc v1 is for advanced-mark.js v1.x.x</p><p>Doc v2 is for advanced-mark.js v2.x.x</p>
+<article id="article"><h2>GitHub Pages</h2>
+<p>Doc v1 is for advanced-mark.js v1.x.x</p>
+<p>Doc v2 is for advanced-mark.js v2.x.x</p>
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> </p>
 </div></footer>
 </main>
 </div>
