--- a/doc-v2/RegExpCreator-module.html
+++ b/doc-v2/RegExpCreator-module.html
@@ -86,7 +86,7 @@ console.log(pattern);</code></pre>
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
