--- a/doc-v2/filtering-matches.html
+++ b/doc-v2/filtering-matches.html
@@ -134,7 +134,7 @@ instance.markRegExp(reg, {
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
