--- a/doc-v2/getting-started.html
+++ b/doc-v2/getting-started.html
@@ -109,7 +109,7 @@ instance.mark(<span class="str">'lorem'</span>);</code></pre>
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
