--- a/doc-v2/mark-lines.html
+++ b/doc-v2/mark-lines.html
@@ -67,7 +67,7 @@ instance.markRanges([{ start: line, length: 1 }], {
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
