--- a/doc-v2/mark-method.html
+++ b/doc-v2/mark-method.html
@@ -287,7 +287,7 @@ instance.mark(<span class="str">'test'</span>, options);</code></pre>
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
