--- a/doc-v2/nesting-overlapping.html
+++ b/doc-v2/nesting-overlapping.html
@@ -191,7 +191,7 @@ nextButton.click(<span class="kwd">function</span>() {
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
