--- a/doc-v2/options.html
+++ b/doc-v2/options.html
@@ -109,7 +109,7 @@ e.g. <code>{ value : 'exactly', limiters : &quot;,.;:?!'\\&quot;()&quot; }</code
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
