--- a/doc-v2/shadow-dom.html
+++ b/doc-v2/shadow-dom.html
@@ -61,7 +61,7 @@ An inline style can be used as an alternative:</p>
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
