--- a/doc-v2/unmark-method.html
+++ b/doc-v2/unmark-method.html
@@ -98,7 +98,7 @@ instance.unmark(options);</code></pre>
 
 </article>
 <footer><div class="info">
-<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> version 2</p>
+<p><a href="https://github.com/angezid/advanced-mark.js">advanced-mark.js</a> <span class="version">version 2<span></p>
 </div></footer>
 </main>
 </div>
